# c-course

./: README.md
C course/1-с-language-basics/1.2-basic-rules-of-calculation/: task_1.2.1.c  task_1.2.3.c
C course/1-с-language-basics/1.3-conditional-jumps/: task_1.3.1.c  task_1.3.2.c
C course/1-с-language-basics/1.6-loops/: task_1.6.3.c
C course/1-с-language-basics/1.7-arrays-and-pointers/: task_1.7.2.c  task_1.7.5.c  task_1.7.6.c  task_1.7.7.c
C course/2-types/2.1-type-system-overview-and-numeric-types/: task_2.1.1.c  task_2.1.2.c
C course/2-types/2.2-interlude-and-dynamic-memory-allocation/: task_2.2.1.c  task_2.2.2.c  task_2.2.3.c  task_2.2.4.c  task_2.2.5.c  task_2.2.6.c
C course/2-types/2.3-structures/: task_2.3.1.c  task_2.3.2.c  task_2.3.3.c  task_2.3.4.c
C course/2-types/2.4-linked-list/: task_2.4.1.c  (+10 more)
C course/C language basics/: task_1.2.4.c  task_1.2.5.c  task_1.2.6.c  task_1.3.3.c  task_1.3.4.c  task_1.5.2.c  task_1.6.1.c  task_1.6.4.c  task_1.7.1.c  task_1.7.3.c  task_1.7.4.c  task_1.8.2.c  task_1.8.3.c
lab1-image-rotation/: CMakeLists.txt
lab1-image-rotation/solution/include/: bmp_manipulator.h  file_manipulator.h  rotation_of_image.h  struct_of_bmp_file.h
lab1-image-rotation/solution/src/: bmp_manipulator.c  file_manipulator.c  main.c  rotation_of_image.c
lab2-memory-allocator/: CMakeLists.txt
lab2-memory-allocator/solution/include/: memory_debuger.h  memory_internals.h  memory_manipulator.h  test_system.h  util.h
lab2-memory-allocator/solution/src/: main.c  memory_debuger.c  memory_manipulator.c  test_system.c  util.c
(+19 files in other folders)
